ukui-screensaver (2.1.1-1kylin76) v101; urgency=medium

  * bug号：无
  * 需求号：无
  * 其他：增加人脸识别依赖项

 -- lilin <lilin@kylinos.cn>  Fri, 13 Aug 2021 11:25:11 +0800

ukui-screensaver (2.1.1-1kylin75) v101; urgency=medium

  * bug号：无
  * 需求号：无
  * 其他：去掉多余代码

 -- lilin <lilin@kylinos.cn>  Thu, 12 Aug 2021 22:05:01 +0800

ukui-screensaver (2.1.1-1kylin74) v101; urgency=medium

  * bug号：无
  * 需求号：无
  * 其他：帮远鹏合入intel相关代码

 -- lilin <lilin@kylinos.cn>  Thu, 12 Aug 2021 21:46:36 +0800

ukui-screensaver (2.1.1-1kylin73) v101; urgency=medium

  * bug号：无
  * 需求号：7167
  * 其他：帮远鹏合入intel相关代码

 -- lilin <lilin@kylinos.cn>  Thu, 12 Aug 2021 19:54:18 +0800

ukui-screensaver (2.1.1-1kylin72) v101; urgency=medium

  * bug#58566

 -- liuyuanpeng <liuyuanpeng@kylinos.cn>  Wed, 04 Aug 2021 20:19:53 +0800

ukui-screensaver (2.1.1-1kylin69) v101; urgency=medium

  * 只有一个用户时，不显示切换用户按钮

 -- liuyuanpeng <liuyuanpeng@kylinos.cn>  Sun, 04 Jul 2021 19:10:54 +0800

ukui-screensaver (2.1.1-1kylin68) v101; urgency=medium

  * 提供基于session空闲时间封装一层空闲时间接口

 -- liuyuanpeng <liuyuanpeng@kylinos.cn>  Sat, 03 Jul 2021 15:00:58 +0800

ukui-screensaver (2.1.1-1kylin67) v101; urgency=medium

  * task:41518

 -- liuyuanpeng <liuyuanpeng@kylinos.cn>  Thu, 01 Jul 2021 21:35:05 +0800

ukui-screensaver (2.1.1-1kylin66) v101; urgency=medium

  * bug#42674 bug#62362

 -- liuyuanpeng <liuyuanpeng@kylinos.cn>  Fri, 18 Jun 2021 21:55:38 +0800

ukui-screensaver (2.1.1-1kylin64) v101; urgency=medium

  * 更新语录,6月20日到7月31日，使用另一个语录文件

 -- liuyuanpeng <liuyuanpeng@kylinos.cn>  Sun, 01 Aug 2021 10:06:38 +0800

ukui-screensaver (2.1.1-1kylin61) v101; urgency=medium

  * 改动说明:更新屏保句子为习近平语录,修复图片随机切换不随机的问题

 -- liuyuanpeng <liuyuanpeng@kylinos.cn>  Fri, 11 Jun 2021 21:26:55 +0800

ukui-screensaver (2.1.1-1kylin60) v101; urgency=medium

  * bug号:60943,59331,59277

 -- liuyuanpeng <liuyuanpeng@kylinos.cn>  Thu, 10 Jun 2021 22:33:42 +0800

ukui-screensaver (2.1.1-1kylin59) v101; urgency=medium

  * 需求号:6016
