@@ -35,6 +35,7 @@
 #include "config.h"
 
 #define WORKING_DIRECTORY "/usr/share/ukui-screensaver"
+bool bControlFlg = false;//是否控制面板窗口
 
 int main(int argc, char *argv[])
 {
@@ -93,8 +94,10 @@ int main(int argc, char *argv[])
         ch.res_name = NULL;
         ch.res_class = NULL;
         XGetClassHint (QX11Info::display(), wid, &ch);
-        if(ch.res_name && strcmp(ch.res_name,"ukui-control-center")==0)
+        if(ch.res_name && strcmp(ch.res_name,"ukui-control-center")==0){
+            bControlFlg = true;
             s.addClickedEvent();
+        }
 #endif
 
         //获取屏保所在屏幕对应的缩放比例。
@@ -111,6 +114,7 @@ int main(int argc, char *argv[])
         s.show();
     }
     else if(onRoot){
+        bControlFlg = false;
         WId wid = QX11Info::appRootWindow();
         QWindow* window = QWindow::fromWinId(wid);
         window->setProperty("_q_embedded_native_parent_handle",QVariant(wid));
